--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8, 3.9, 3.10]  # Garantir versões do Python compatíveis com Django 4.x
+        python-version: [3.8, 3.9, 3.10]  # Garantir versões do Python compatíveis com Django 4.x (tava dando problema isso)
 
     steps:
     - name: Checkout code
