--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - redis
     environment:
       - DEBUG=1
       - DJANGO_SETTINGS_MODULE=app.settings
@@ -26,6 +27,11 @@ services:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+
+  redis:
+    image: redis:6.2
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
