--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ django-extensions==3.2.3  # Extensões úteis para Django
 django-filter>=23.5
 django-cors-headers>=4.3.1
 coreapi>=2.3.3
+django-redis>=5.4.0
