git commit -m "Configuração de testes e cobertura de código
- Adiciona configurações para pytest e coverage
- Atualiza Dockerfile e docker-compose para suportar testes
- Cria arquivos de configuração para testes (.coveragerc, pytest.ini)
- Ajusta importações e estrutura de testes
- Adiciona migrações iniciais para clientes e transações"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST=db
+      - PYTHONPATH=/code
 
   db:
     image: postgres:13
